[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/title_placeholder.png" type="Texture" id=1]
[ext_resource path="res://Scripts/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://SFX/intro.mp3" type="AudioStream" id=3]
[ext_resource path="res://Sprites/forest_alt_palette.png" type="Texture" id=4]
[ext_resource path="res://Entities/ARIAL.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/button_nopress.png" type="Texture" id=6]
[ext_resource path="res://Sprites/button_press.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 19
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.141176, 0.588235, 0.658824, 1 )

[sub_resource type="DynamicFont" id=5]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512.1, 297.575 )
scale = Vector2( 3.60493, 3.41724 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 504, 136 )
scale = Vector2( 1.81436, 2.36765 )
texture = ExtResource( 1 )

[node name="Newgame" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 404.0
margin_top = 240.0
margin_right = -440.0
margin_bottom = -264.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Newgame"]
margin_left = 8.0
margin_top = 16.0
margin_right = 168.0
margin_bottom = 80.0
theme = SubResource( 2 )
text = "NEW GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 404.0
margin_top = 464.0
margin_right = -440.0
margin_bottom = -40.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Quit"]
margin_left = 8.0
margin_top = 16.0
margin_right = 172.0
margin_bottom = 80.0
theme = SubResource( 2 )
text = "EXIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 404.0
margin_top = 352.0
margin_right = -440.0
margin_bottom = -152.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="LoadGame"]
margin_left = 4.0
margin_top = 16.0
margin_right = 172.0
margin_bottom = 88.0
theme = SubResource( 2 )
text = "LOAD GAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 232.0
margin_bottom = 232.0
theme = SubResource( 3 )
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TabContainer" parent="."]
visible = false
margin_top = 232.0
margin_right = 1024.0
margin_bottom = 600.0
theme = SubResource( 6 )
custom_styles/panel = SubResource( 7 )
tabs_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Newgame" to="." method="_on_Newgame_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="LoadGame" to="." method="_on_LoadGame_pressed"]
